--- a/html/createnewgroup.html
+++ b/html/createnewgroup.html
@@ -38,11 +38,10 @@
             <div class="color-purple color-tile"></div>
             <div class="color-cyan color-tile"></div>
             <div class="color-orange color-tile"></div>
+            <div class="color-tile color-random">?</div>
         </div>
         <input type="text" placeholder="Group Name">
-        <input type="text" placeholder="Group Alias">
-        <input type="checkbox" id="onOpenBehavior" value="True">
-        <label for="onOpenBehavior">Always open in new window<br>(Defaults to no)</label>    
+        <input type="text" placeholder="Group Alias">  
         <input type="checkbox" id="onOpenBehavior" value="True">
         <label for="onOpenBehavior">Expand group on create<br>(Defaults to no)</label>    
         <button id="create-group-button">Create</button>
