--- a/html/popup.html
+++ b/html/popup.html
@@ -8,7 +8,7 @@
     <title>Tabitha</title>
 </head>
 <body class="flex flex-column full-height">
-    <div class="flex justify-between">
+    <div id="header" class="flex justify-between">
         <div class="flex align-center">
             <div class="popup-icon-container">
                 <img class="popup-icon" src="../icons/tabitha48.png">
@@ -20,138 +20,11 @@
             <button id="edit-existing-group" class="popup-header-items-margin popup-header-controls">Edit</button>
         </div>
     </div>
-    <div class="cmd-input-container flex flex-center">
+    <div id="cmd-input-bar" class="cmd-input-container flex flex-center">
         <input id="cmd-input" class="text-input popup-cmd-text-input cmd-input" type="text">
     </div>
     <div class="flex flex-grow popup-table-tab-groups">
-        <div id="tab-groups" class="flex no-scrollbar scroll-div popup-tab-groups-inner-div">
-            <!-- <div class="list-item flex justify-between align-center">
-                <button>Se</button>
-                <div>Tab Group Name</div>
-                <div>tgn</div>
-            </div> -->
-        </div>
-        <div id="tabs" class="flex flex-grow no-scrollbar scroll-div popup-table-tabs">
-            <div class="list-item flex justify-between flex-column">
-                <div class="flex justify-around full-width">
-                    <div>tab name</div>
-                    <div>alias</div>
-                </div>
-
-                <div class="text-center">https://www.googs.com/edu/snack</div>
-            </div>
-            <div class="list-item flex justify-between flex-column">
-                <div class="flex justify-around full-width">
-                    <div>tab name</div>
-                    <div>alias</div>
-                </div>
-
-                <div class="text-center">https://www.googs.com/edu/snack</div>
-            </div>
-            <div class="list-item flex justify-between flex-column">
-                <div class="flex justify-around full-width">
-                    <div>tab name</div>
-                    <div>alias</div>
-                </div>
-
-                <div class="text-center">https://www.googs.com/edu/snack</div>
-            </div>
-            <div class="list-item flex justify-between flex-column">
-                <div class="flex justify-around full-width">
-                    <div>tab name</div>
-                    <div>alias</div>
-                </div>
-
-                <div class="text-center">https://www.googs.com/edu/snack</div>
-            </div>
-            <div class="list-item flex justify-between flex-column">
-                <div class="flex justify-around full-width">
-                    <div>tab name</div>
-                    <div>alias</div>
-                </div>
-
-                <div class="text-center">https://www.googs.com/edu/snack</div>
-            </div>
-            <div class="list-item flex justify-between flex-column">
-                <div class="flex justify-around full-width">
-                    <div>tab name</div>
-                    <div>alias</div>
-                </div>
-
-                <div class="text-center">https://www.googs.com/edu/snack</div>
-            </div>
-            <div class="list-item flex justify-between flex-column">
-                <div class="flex justify-around full-width">
-                    <div>tab name</div>
-                    <div>alias</div>
-                </div>
-
-                <div class="text-center">https://www.googs.com/edu/snack</div>
-            </div>
-            <div class="list-item flex justify-between flex-column">
-                <div class="flex justify-around full-width">
-                    <div>tab name</div>
-                    <div>alias</div>
-                </div>
-
-                <div class="text-center">https://www.googs.com/edu/snack</div>
-            </div>
-            <div class="list-item flex justify-between flex-column">
-                <div class="flex justify-around full-width">
-                    <div>tab name</div>
-                    <div>alias</div>
-                </div>
-
-                <div class="text-center">https://www.googs.com/edu/snack</div>
-            </div>
-            <div class="list-item flex justify-between flex-column">
-                <div class="flex justify-around full-width">
-                    <div>tab name</div>
-                    <div>alias</div>
-                </div>
-
-                <div class="text-center">https://www.googs.com/edu/snack</div>
-            </div>
-            <div class="list-item flex justify-between flex-column">
-                <div class="flex justify-around full-width">
-                    <div>tab name</div>
-                    <div>alias</div>
-                </div>
-
-                <div class="text-center">https://www.googs.com/edu/snack</div>
-            </div>
-            <div class="list-item flex justify-between flex-column">
-                <div class="flex justify-around full-width">
-                    <div>tab name</div>
-                    <div>alias</div>
-                </div>
-
-                <div class="text-center">https://www.googs.com/edu/snack</div>
-            </div>
-            <div class="list-item flex justify-between flex-column">
-                <div class="flex justify-around full-width">
-                    <div>tab name</div>
-                    <div>alias</div>
-                </div>
-
-                <div class="text-center">https://www.googs.com/edu/snack</div>
-            </div>
-            <div class="list-item flex justify-between flex-column">
-                <div class="flex justify-around full-width">
-                    <div>tab name</div>
-                    <div>alias</div>
-                </div>
-
-                <div class="text-center">https://www.googs.com/edu/snack</div>
-            </div>
-            <div class="list-item flex justify-between flex-column">
-                <div class="flex justify-around full-width">
-                    <div>tab name</div>
-                    <div>alias</div>
-                </div>
-
-                <div class="text-center">https://www.googs.com/edu/snack</div>
-            </div>
+        <div id="tab-groups-list" class="flex flex-grow no-scrollbar scroll-div popup-table-tabs"> 
         </div>
     </div>
 </body>
