--- a/html/createnewgroup.html
+++ b/html/createnewgroup.html
@@ -28,17 +28,17 @@
         </div>
     </div>
     <div id="control-panel">
-        <div class="color-grid">
-            <div class="color-grey color-tile"></div>
-            <div class="color-blue color-tile"></div>
-            <div class="color-red color-tile"></div>
-            <div class="color-yellow color-tile"></div>
-            <div class="color-green color-tile"></div>
-            <div class="color-pink color-tile"></div>
-            <div class="color-purple color-tile"></div>
-            <div class="color-cyan color-tile"></div>
-            <div class="color-orange color-tile"></div>
-            <div class="color-tile color-random">?</div>
+        <div id="color-grid" class="color-grid">
+            <div data-color="#CDCED0" class="color-grey color-tile"></div>
+            <div data-color="#83ADF5" class="color-blue color-tile"></div>
+            <div data-color="#FC938D" class="color-red color-tile"></div>
+            <div data-color="#FFD558" class="color-yellow color-tile"></div>
+            <div data-color="#7AC491" class="color-green color-tile"></div>
+            <div data-color="#FE8BC6" class="color-pink color-tile"></div>
+            <div data-color="#BF85F3" class="color-purple color-tile"></div>
+            <div data-color="#7FE3F3" class="color-cyan color-tile"></div>
+            <div data-color="#FEAE6F" class="color-orange color-tile"></div>
+            <div data-color="RANDOM" class="color-tile color-random">?</div>
         </div>
         <input type="text" placeholder="Group Name">
         <input type="text" placeholder="Group Alias">  
