--- a/html/createnewgroup.html
+++ b/html/createnewgroup.html
@@ -22,7 +22,7 @@
                 <tr>
                   <th>Tab Icon</th>
                   <th>Tab Title</th>
-                  <th>Url</th>
+                  <th>Tab Url
                 </tr>
             </table>
         </div>
@@ -40,8 +40,8 @@
             <div data-color="#FEAE6F" class="color-orange color-tile"></div>
             <div data-color="RANDOM" class="color-tile color-random">?</div>
         </div>
-        <input type="text" placeholder="Group Name">
-        <input type="text" placeholder="Group Alias">  
+        <input type="text" placeholder="Group Name (required)" id="name">
+        <input type="text" placeholder="Group Alias (Optional)" id="alias">  
         <input type="checkbox" id="onOpenBehavior" value="True">
         <label for="onOpenBehavior">Expand group on create<br>(Defaults to no)</label>    
         <button id="create-group-button">Create</button>
