--- a/html/createnewgroup.html
+++ b/html/createnewgroup.html
@@ -25,8 +25,8 @@
             <div id="index_native" class="box"></div>
             <table id="table">
                 <tr>
-                  <th style="max-width: 10px">Include?</th>
-                  <th>Group?</th>
+                  <th class="small-col">Include?</th>
+                  <th class="small-col">Group?</th>
                   <th>Tab Icon</th>
                   <th>Tab Title</th>
                   <th>Tab Url
