--- a/html/createnewgroup.html
+++ b/html/createnewgroup.html
@@ -54,7 +54,6 @@
         <button id="create-group-button">Create</button>
     </div>
 </body>
-<script src="../js/loadTabs.js"></script>
-<script src="../js/createGroup.js"></script>
+<script src="../js/main.js"></script>
 
 </html>
