--- a/html/createnewgroup.html
+++ b/html/createnewgroup.html
@@ -15,7 +15,7 @@
         <div class="page-title">Create New Group</div>
         <div id="table-controls">
             <div>Select All</div>
-            <input type="checkbox" />
+            <input id="select-all" type="checkbox" />
         </div>
     </div>
 
@@ -49,11 +49,11 @@
         </div>
         <input type="text" placeholder="Group Name (required)" id="name">
         <input type="text" placeholder="Group Alias (Optional)" id="alias">  
-        <input type="checkbox" id="onOpenBehavior" value="True">
-        <label for="onOpenBehavior">Expand group on create<br>(Defaults to no)</label>    
+        <input type="checkbox" id="on-open-behavior" value="True">
+        <label for="on-open-behavior">Expand group on create<br>(Defaults to no)</label>    
         <button id="create-group-button">Create</button>
     </div>
 </body>
-<script src="../js/main2.js"></script>
+<script src="../js/createnewgroup.js"></script>
 
 </html>
