--- a/html/createnewgroup.html
+++ b/html/createnewgroup.html
@@ -47,7 +47,7 @@
             <div data-color="orange" class="color-orange color-tile"></div>
             <div data-color="RANDOM" class="color-tile color-random selected">?</div>
         </div>
-        <input type="text" placeholder="Group Name (required)" id="name">
+        <input type="text" placeholder="Group Title (Optional)" id="title">
         <input type="text" placeholder="Group Alias (Optional)" id="alias">  
         <input type="checkbox" id="on-open-behavior" value="True">
         <label for="on-open-behavior">Expand group on create<br>(Defaults to no)</label>    
